--- a/jolly-blog/_posts/firstBlog.mdx
+++ b/jolly-blog/_posts/firstBlog.mdx
@@ -26,3 +26,7 @@ Numbered?
 1. one
 2. two
 3. three
+
+Image test:
+
+<img alt="test image" src="https://storage.googleapis.com/jolly-blog/test.jpg" width={1000} height={800} />
