photo list and bergen blog WIP

--- a/johnandmolly/src/app/travel/bergen/page.mdx
+++ b/johnandmolly/src/app/travel/bergen/page.mdx
@@ -1,5 +1,46 @@
+import { PhotoGrid } from '../components/PhotoGrid/PhotoGrid';
+
 export const metadata = {
   title: 'Bergen',
 };
 
 # Bergen Norway
+
+We kicked off our Scandanavian adventure in a city on the west coast of Norway
+nicknamed **"The Heart of the Fjords."** A small town feel despite it being the
+second largest city in Norway. We stayed at [a
+hotel](https://maps.app.goo.gl/Hh8MtEDngcxtxQbs9) really close to the main port
+in the heart of town so exploring was a breeze.
+
+<br />
+
+## Food
+
+### → [Mandalay Sushi & Burmese](https://maps.app.goo.gl/PQbSoVYZt7CM6LhA7)
+
+Our first day was mostly a travel day to get here, but we ended up wandering
+around the cobblestone alleys and popping into a bunch of different spots for
+food and drinks. Mandalay was where we had a proper meal. The sashimi, spicy
+tuna roll, and sake were all delicious and our waiter was super friendly.
+
+<br />
+
+### → [Trekroneren](https://maps.app.goo.gl/WXY6fJbceFYGx7q19)
+
+REINDEER HOT DOGS!! After getting pretty toasty hopping from wine bar to
+cocktail bar to pub, we hit up this street-side hot dog stand for a classic
+reindeer dog. The thing was so scortching hot that we both burnt the roofs of
+our mouths. The glizzy was good but it had a sort of bologna like texture that
+made it feel weird.
+
+<br />
+
+## Coffee
+
+### → [Kaffemisjonen](https://maps.app.goo.gl/vbuWv3tBTw7awMvr5)
+
+<br />
+
+## Nature
+
+<PhotoGrid dir="bergen" />
