idk maybe cache

--- a/johnandmolly/src/app/travel/bergen/page.mdx
+++ b/johnandmolly/src/app/travel/bergen/page.mdx
@@ -1,5 +1,6 @@
 import { PhotoGrid } from '../components/PhotoGrid/PhotoGrid';
 
+export const revalidate = 600; // revalidate the data every 10 minutes
 export const metadata = {
   title: 'Bergen',
 };
