--- a/johnandmolly/src/app/travel/bergen/page.mdx
+++ b/johnandmolly/src/app/travel/bergen/page.mdx
@@ -1,8 +1,13 @@
+import { HeroImage } from '../components/HeroImage/HeroImage';
 import { PhotoGrid } from '../components/PhotoGrid/PhotoGrid';
 
 export const metadata = {
   title: 'Bergen',
 };
+
+<HeroImage name="bergen" />
+
+<div className="h-6" />
 
 # Bergen Norway
 
@@ -12,20 +17,20 @@ second largest city in Norway. We stayed at [a
 hotel](https://maps.app.goo.gl/Hh8MtEDngcxtxQbs9) really close to the main port
 in the heart of town so exploring was a breeze.
 
-<br />
+<div className="h-6" />
 
 ## Food
 
-### → [Mandalay Sushi & Burmese](https://maps.app.goo.gl/PQbSoVYZt7CM6LhA7)
+### [Mandalay Sushi & Burmese](https://maps.app.goo.gl/PQbSoVYZt7CM6LhA7)
 
 Our first day was mostly a travel day to get here, but we ended up wandering
 around the cobblestone alleys and popping into a bunch of different spots for
 food and drinks. Mandalay was where we had a proper meal. The sashimi, spicy
 tuna roll, and sake were all delicious and our waiter was super friendly.
 
-<br />
+<div className="h-4" />
 
-### → [Trekroneren](https://maps.app.goo.gl/WXY6fJbceFYGx7q19)
+### [Trekroneren](https://maps.app.goo.gl/WXY6fJbceFYGx7q19)
 
 REINDEER HOT DOGS!! After getting pretty toasty hopping from wine bar to
 cocktail bar to pub, we hit up this street-side hot dog stand for a classic
@@ -33,14 +38,25 @@ reindeer dog. The thing was so scortching hot that we both burnt the roofs of
 our mouths. The glizzy was good but it had a sort of bologna like texture that
 made it feel weird.
 
-<br />
+<div className="h-6" />
 
 ## Coffee
 
-### → [Kaffemisjonen](https://maps.app.goo.gl/vbuWv3tBTw7awMvr5)
+### [Kaffemisjonen](https://maps.app.goo.gl/vbuWv3tBTw7awMvr5)
 
-<br />
+<div className="h-6" />
 
 ## Nature
+
+### [Fløyen](https://maps.app.goo.gl/J5c1FR11EnU59G5w9)
+
+We hiked up the super cool forresty trail to the overlook and then took the
+cable car down. There was some pretty low fog the morning we did this but it
+made for a dramatic moody hike and we caught glimpses of the view as the clouds
+rolled through.
+
+<div className="h-6" />
+
+## Photos
 
 <PhotoGrid dir="bergen" />
