--- a/johnandmolly/src/app/travel/bergen/page.mdx
+++ b/johnandmolly/src/app/travel/bergen/page.mdx
@@ -52,7 +52,7 @@ made it feel weird.
 ### [Kaffemisjonen](https://maps.app.goo.gl/vbuWv3tBTw7awMvr5)
 
 On day 2 we found a little coffee shop tucked up on a hill to post up for some
-journaling and planning. We both had some great flat white's and ham and cheese
+journaling and planning. We both had some great flat whites and ham and cheese
 croissants.
 
 <PhotoCarousel
