--- a/johnandmolly/src/app/travel/bergen/page.mdx
+++ b/johnandmolly/src/app/travel/bergen/page.mdx
@@ -51,9 +51,10 @@ made it feel weird.
 
 ### [Kaffemisjonen](https://maps.app.goo.gl/vbuWv3tBTw7awMvr5)
 
-On day 2 we found a little coffee shop tucked up on a hill to post up for some
-journaling and planning. We both had some great flat whites and ham and cheese
-croissants.
+The morning of the second day we went for a morning jog and finished at a little
+coffee shop tucked up on a hill to post up for some fuel (read: flat white and
+pasties) and planning for the day. After this we headed straight to the hike up
+Fløyen.
 
 <PhotoCarousel
   photos={['/s/bergen/kaffemisjonen1.JPG', '/s/bergen/kaffemisjonen2.JPG']}
