[johnandmolly] photo list and bergen blog WIP (#119)

--- a/johnandmolly/src/app/travel/bergen/page.mdx
+++ b/johnandmolly/src/app/travel/bergen/page.mdx
@@ -1,5 +1,78 @@
+import { HeroImage } from '../components/HeroImage/HeroImage';
+import { PhotoCarousel } from '../components/PhotoCarousel/PhotoCarousel';
+import { PhotoGrid } from '../components/PhotoGrid/PhotoGrid';
+
 export const metadata = {
   title: 'Bergen',
 };
 
+<HeroImage name="bergen" />
+
+<div className="h-6" />
+
 # Bergen Norway
+
+We kicked off our Scandanavian adventure in a city on the west coast of Norway
+nicknamed **"The Heart of the Fjords."** A small town feel despite it being the
+second largest city in Norway. We stayed at [a
+hotel](https://maps.app.goo.gl/Hh8MtEDngcxtxQbs9) really close to the main port
+in the heart of town so exploring was a breeze.
+
+<div className="h-6" />
+
+## Food
+
+### [Mandalay Sushi & Burmese](https://maps.app.goo.gl/PQbSoVYZt7CM6LhA7)
+
+Our first day was mostly a travel day to get here, but we ended up wandering
+around the cobblestone alleys and popping into a bunch of different spots for
+food and drinks. Mandalay was where we had a proper meal. The sashimi, spicy
+tuna roll, and sake were all delicious and our waiter was super friendly.
+
+<PhotoCarousel photos={['/s/bergen/mandalay1.JPG']} />
+
+<div className="h-4" />
+
+### [Trekroneren](https://maps.app.goo.gl/WXY6fJbceFYGx7q19)
+
+REINDEER HOT DOGS!! After getting pretty toasty hopping from wine bar to
+cocktail bar to pub, we hit up this street-side hot dog stand for a classic
+reindeer dog. The thing was so scortching hot that we both burnt the roofs of
+our mouths. The glizzy was good but it had a sort of bologna like texture that
+made it feel weird.
+
+<PhotoCarousel
+  photos={['/s/bergen/trekroneren1.JPG', '/s/bergen/trekroneren2.JPG']}
+/>
+
+<div className="h-6" />
+
+## Coffee
+
+### [Kaffemisjonen](https://maps.app.goo.gl/vbuWv3tBTw7awMvr5)
+
+The morning of the second day we went for a morning jog and finished at a little
+coffee shop tucked up on a hill to post up for some fuel (read: flat white and
+pasties) and planning for the day. After this we headed straight to the hike up
+Fløyen.
+
+<PhotoCarousel
+  photos={['/s/bergen/kaffemisjonen1.JPG', '/s/bergen/kaffemisjonen2.JPG']}
+/>
+
+<div className="h-6" />
+
+## Nature
+
+### [Fløyen](https://maps.app.goo.gl/J5c1FR11EnU59G5w9)
+
+We hiked up the super cool forresty trail to the overlook and then took the
+cable car down. There was some pretty low fog the morning we did this but it
+made for a dramatic moody hike and we caught glimpses of the view as the clouds
+rolled through.
+
+<PhotoCarousel photos={['/s/bergen/fløyen1.JPG', '/s/bergen/fløyen2.JPG']} />
+
+<div className="h-32" />
+
+<PhotoGrid dir="bergen" />
