--- a/johnandmolly/src/app/travel/bergen/page.mdx
+++ b/johnandmolly/src/app/travel/bergen/page.mdx
@@ -26,7 +26,7 @@ in the heart of town so exploring was a breeze.
 
 Our first day was mostly a travel day to get here, but we ended up wandering
 around the cobblestone alleys and popping into a bunch of different spots for
-food and drinks. Mandalay was where we had a proper meal. The sashimi, spicy
+food and drinks. Mandalay was the first place we had a proper meal. The sashimi, spicy
 tuna roll, and sake were all delicious and our waiter was super friendly.
 
 <PhotoCarousel photos={['/s/bergen/mandalay1.JPG']} />
@@ -51,9 +51,9 @@ made it feel weird.
 
 ### [Kaffemisjonen](https://maps.app.goo.gl/vbuWv3tBTw7awMvr5)
 
-The morning of the second day we went for a morning jog and finished at a little
+The morning of the second day we went for a jog and finished at a little
 coffee shop tucked up on a hill to post up for some fuel (read: flat white and
-pasties) and planning for the day. After this we headed straight to the hike up
+pastries) and planning for the day. After this we headed straight to the hike up
 Fløyen.
 
 <PhotoCarousel
@@ -66,10 +66,10 @@ Fløyen.
 
 ### [Fløyen](https://maps.app.goo.gl/J5c1FR11EnU59G5w9)
 
-We hiked up the super cool forresty trail to the overlook and then took the
-cable car down. There was some pretty low fog the morning we did this but it
-made for a dramatic moody hike and we caught glimpses of the view as the clouds
-rolled through.
+We hiked up the super cool foresty trail to the overlook and then took the
+cable car down. There was some pretty low fog the morning we did this so
+visibility was low but it made for a dramatic moody hike and we caught glimpses
+of the view as the clouds rolled through.
 
 <PhotoCarousel photos={['/s/bergen/fløyen1.JPG', '/s/bergen/fløyen2.JPG']} />
 
